--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -33,6 +33,9 @@
               <li class="nav-item m-1">
                 <a class="btn btn-outline-primary" href="{% url 'profiles:list' %}">Perfiles</a>
               </li>
+              <li class="nav-item m-1">
+                <a class="btn btn-outline-primary" href="{% url 'animales:animales' %}">Animales</a>
+              </li>
             </ul>
             <ul class="navbar-nav">
               {% if not request.user.is_authenticated %}
